messing with main; fix parallax breaking on small

--- a/css/main.scss
+++ b/css/main.scss
@@ -168,6 +168,10 @@ figcaption {
 
 .banderole {
   @include grid-row();
+  overflow-y: auto;
+  @include breakpoint(small only) {
+    max-height: 22.5rem;
+  }
 }
 
 .titlelines {
